[gd_scene load_steps=18 format=3 uid="uid://boehhvcfaynfs"]

[ext_resource type="Script" path="res://scripts/objects/camp.gd" id="1_cmu37"]
[ext_resource type="Texture2D" uid="uid://bkjd5bjy7hiws" path="res://assets/firepit.png" id="2_ef8dj"]
[ext_resource type="Texture2D" uid="uid://cohd7n5opct4c" path="res://assets/flame.png" id="3_go7ux"]

[sub_resource type="Animation" id="Animation_mdoho"]
resource_name = "0"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uuun2"]
resource_name = "1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_7am1f"]
resource_name = "2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_n5ue3"]
resource_name = "3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_r76bo"]
resource_name = "4"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_yme00"]
resource_name = "5"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_yfyns"]
resource_name = "6"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_d27f6"]
resource_name = "7"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_kavxh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wol1m"]
_data = {
"0": SubResource("Animation_mdoho"),
"1": SubResource("Animation_uuun2"),
"2": SubResource("Animation_7am1f"),
"3": SubResource("Animation_n5ue3"),
"4": SubResource("Animation_r76bo"),
"5": SubResource("Animation_yme00"),
"6": SubResource("Animation_yfyns"),
"7": SubResource("Animation_d27f6"),
"RESET": SubResource("Animation_kavxh")
}

[sub_resource type="Gradient" id="Gradient_pk0wr"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.5, 0.5, 0.5, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wremc"]
gradient = SubResource("Gradient_pk0wr")
fill = 1
fill_from = Vector2(0.482906, 0.487179)
fill_to = Vector2(0.790598, 0.24359)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqnin"]
size = Vector2(31.5693, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_bghwe"]
radius = 50.7073

[node name="Camp" type="Node2D"]
script = ExtResource("1_cmu37")

[node name="Pit" type="Sprite2D" parent="."]
position = Vector2(0.140297, -3.64752)
texture = ExtResource("2_ef8dj")

[node name="Flame" type="Sprite2D" parent="."]
position = Vector2(0.854667, -4.5153)
texture = ExtResource("3_go7ux")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flame"]
libraries = {
"": SubResource("AnimationLibrary_wol1m")
}

[node name="PointLight2D" type="PointLight2D" parent="Flame"]
position = Vector2(-0.862194, 2.58241)
scale = Vector2(0.03, 0.03)
color = Color(1, 0.803922, 0.254902, 0.47451)
texture = SubResource("GradientTexture2D_wremc")

[node name="Shrink" type="Timer" parent="."]
wait_time = 10.0

[node name="Regen" type="Timer" parent="."]
wait_time = 2.0

[node name="Range" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2(0.0365326, -6.17354)
shape = SubResource("RectangleShape2D_fqnin")

[node name="HoverText" type="Label" parent="."]
offset_left = -3.0
offset_top = -7.0
offset_right = 31.0
offset_bottom = 12.0
scale = Vector2(0.18, 0.2)
text = "[ E ]"

[node name="SafeZone" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafeZone"]
shape = SubResource("CircleShape2D_bghwe")

[connection signal="timeout" from="Shrink" to="." method="_on_shrink_timeout"]
[connection signal="timeout" from="Regen" to="." method="_on_regen_timeout"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="body_entered" from="SafeZone" to="." method="_on_safe_zone_body_entered"]
